--- a/pom.xml
+++ b/pom.xml
@@ -10,24 +10,38 @@
   <name>file-conversor</name>
   <url>http://maven.apache.org</url>
 
-  <repositories>
-    <repository>
-      <id>ofx4j-repo</id>
-      <url>https://raw.github.com/stoicflame/ofx4j/mvn-repo/</url>
-    </repository>
-  </repositories>
-
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
   <dependencies>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi</artifactId>
+      <version>5.2.3</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi-ooxml</artifactId>
+      <version>5.2.3</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>2.20.0</version>
+    </dependency>
+
+
   </dependencies>
 </project>
